<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/MainLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblStatoLog"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtStatoLogging"
        android:id="@+id/txtStatoLogging"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGoInBackground"
        android:id="@+id/btnBackgroudButton"
        android:onClick="goInBackground"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAvviaLog"
        android:id="@+id/btnStartStopService"
        android:checked="false"
        android:layout_alignTop="@+id/btnBackgroudButton"
        android:layout_alignEnd="@+id/txtStatoLogging"
        android:onClick="startStopLogService"
        android:textOn="@string/stopServiceButtonText"
        android:textOff="@string/startServiceButtonText"
        android:textColorHighlight="@android:color/holo_purple" />

    <RatingBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarServiceRunning"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:indeterminate="true" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/valoriGPS"
        android:layout_below="@+id/progressBarServiceRunning"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAccuratezza"
            android:id="@+id/txtAccLbl"
            android:layout_row="1"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoValue"
            android:id="@+id/valPrecisione"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblVelocita"
            android:id="@+id/txtVelLbl"
            android:layout_row="1"
            android:layout_column="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoValue"
            android:id="@+id/valVelocita"
            android:layout_row="1"
            android:layout_column="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblAltitudine"
            android:id="@+id/txtAltLbl"
            android:layout_row="2"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoValue"
            android:id="@+id/valAltitudine"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblTempo"
            android:id="@+id/txtTempoLbl"
            android:layout_row="2"
            android:layout_column="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoValue"
            android:id="@+id/valTempo"
            android:layout_row="2"
            android:layout_column="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblLatitudine"
            android:id="@+id/txtLatLbl"
            android:layout_row="3"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoValue"
            android:id="@+id/valLatitudine"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblBussola"
            android:id="@+id/txtBussolaLbl"
            android:layout_row="3"
            android:layout_column="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoValue"
            android:id="@+id/valBussola"
            android:layout_row="3"
            android:layout_column="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblLongitudine"
            android:id="@+id/txtLongLbl"
            android:layout_row="4"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoValue"
            android:id="@+id/valLongitudine"
            android:layout_row="4"
            android:layout_column="1" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoValue"
        android:id="@+id/txtLogFileName"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/valoriGPS"
        android:clickable="true"
        android:onClick="showLogFile"
        android:background="@color/link_text_material_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblStatoGPS"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtStatoLogging"
        android:id="@+id/txtStatoGPS"
        android:layout_alignTop="@+id/progressBarServiceRunning"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNumeroSatelliti"
        android:id="@+id/textView2"
        android:layout_below="@+id/valoriGPS"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoValue"
        android:id="@+id/valNumSat"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignStart="@+id/valPollingTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPollingTime"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPollingSpace"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoValue"
        android:id="@+id/valPollingTime"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoValue"
        android:id="@+id/valPollingSpace"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignStart="@+id/valPollingTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPuntiSalvati"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoValue"
        android:id="@+id/valPuntiSalvati"
        android:layout_below="@+id/valPollingSpace"
        android:layout_alignStart="@+id/valPollingSpace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtFileName"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoValue"
        android:id="@+id/valFileSize"
        android:layout_below="@+id/valPuntiSalvati"
        android:layout_alignStart="@+id/valPuntiSalvati" />

</RelativeLayout>
